[gd_scene load_steps=3 format=3 uid="uid://bd1ru1cfoi4mk"]

[ext_resource type="Script" uid="uid://bgkj03s2r2cco" path="res://scenes/HighscoreScreen.gd" id="1_vvh6p"]
[ext_resource type="AudioStream" uid="uid://d2lqhmqvgerhb" path="res://Audio/Fingerfist Ost 05.mp3" id="2_dbk2a"]

[node name="HighscoreScreen" type="Node2D"]
script = ExtResource("1_vvh6p")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1146.0
offset_bottom = 654.0
color = Color(0.166246, 0.0380521, 0, 0.678431)

[node name="HighscoreLabel" type="Label" parent="."]
offset_left = 301.0
offset_top = -2.0
offset_right = 525.0
offset_bottom = 647.0
theme_override_font_sizes/font_size = 22
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="Button" parent="."]
offset_left = 689.0
offset_top = 284.0
offset_right = 974.0
offset_bottom = 344.0
text = "Main Menu
"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dbk2a")
volume_db = -7.495
pitch_scale = 0.7
autoplay = true

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
